[package]
name = "atcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
lexicons = { path = "lexicons" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
hickory-resolver = "0.24"
